force-app/main/default/objects/Batch_Process__c/Batch_Process__c.object-meta.xml
<CustomObject>
    <label>Batch Process</label>
    <nameField>
        <displayFormat>BATCH-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>