force-app/main/default/objects/Batch_Process__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Batch Processes</relationshipLabel>
    <relationshipName>Batch_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>