force-app/main/default/objects/Batch_Process__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Batch Processes</relationshipLabel>
    <relationshipName>Batch_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>