force-app/main/default/objects/Batch_Process__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <type>TextArea</type>
</CustomField>